Add Javadoc, simplify assertions and remove unnecessary imports