@@ -10,7 +10,7 @@ import ca.bc.gov.health.qa.autotest.runner.util.selenium.SeleniumSession;
 import ca.bc.gov.health.qa.autotest.runner.util.selenium.pages.BasicWebPageFragment;
 
 /**
- * TODO (AZ) - doc
+ * Fragment class for the search results when searching by provider
  */
 public class SearchProviderResultsFragment
 extends BasicWebPageFragment
@@ -19,10 +19,9 @@ extends BasicWebPageFragment
     private static final String RESULTS_TABLE_DATA_CSS = "tbody#searchResultsForm\\:tbl_data";
 
     /**
-     * TODO (AZ) - doc
+     * Initializes fragment and changes selenium's main locator to point to the search results container
      *
-     * @param selenium
-     *        ???
+     * @param selenium  The current SeleniumSession
      */
     public SearchProviderResultsFragment(SeleniumSession selenium)
     {
@@ -30,12 +29,10 @@ extends BasicWebPageFragment
     }
 
     /**
-     * TODO (AZ) - doc
+     * Grab a specific row from the results table when searching by provider
      *
-     * @param index
-     *        ???
-     *
-     * @return ???
+     * @param index the index of the row to grab from the results table
+     * @return      A list of strings representing the data in the specified row index
      */
     public List<String> grabResultsRow(int index)
     {
@@ -49,9 +46,9 @@ extends BasicWebPageFragment
     }
 
     /**
-     * TODO (AZ) - doc
+     * Grab the number of rows in the results table when searching by provider
      *
-     * @return ???
+     * @return The number of rows in the results table
      */
 	public int grabResultsRowCount() {
 		int even = findResultsTableData().findElements(By.cssSelector("tr.ui-datatable-even")).size();
@@ -62,12 +59,10 @@ extends BasicWebPageFragment
 	}
 
     /**
-     * TODO (AZ) - doc
+     * Grabs the message displayed when no results are found in the results table
      *
-     * @return ???
-     *
-     * @throws IllegalStateException
-     *         ???
+     * @return The string message displayed in the results table if no results are returned
+     * @throws IllegalStateException If the number of rows in the results table is nonzero
      */
     public String grabEmptyResultsMessage()
     {
@@ -82,9 +77,10 @@ extends BasicWebPageFragment
     }
 
     /**
-     * TODO (AZ) - doc
+     * Grabs the results summary text (number of results + time taken)
      *
-     * @return ???
+     * @return                       The results summary string
+     * @throws IllegalStateException If unable to retrieve the results summary
      */
     public String grabResultsSummary()
     {
@@ -102,10 +98,9 @@ extends BasicWebPageFragment
     }
 
     /**
-     * TODO (AZ) - doc
+     * Opens a result from the results table when searching by provider
      *
-     * @param index
-     *        ???
+     * @param index the index of the row to open from the results table
      */
     public void openResults(int index)
     {
@@ -117,15 +112,11 @@ extends BasicWebPageFragment
     private WebElement findResultsRow(int index)
     {
         WebElement row;
-        By rowLocator = By.cssSelector(
-                new StringBuilder("tr[data-ri='")
-                    .append(index)
-                    .append("']")
-                    .toString());
+        By rowLocator = By.cssSelector("tr[data-ri='" + index + "']");
         List<WebElement> rowList = findResultsTableData().findElements(rowLocator);
         if (rowList.size() == 1)
         {
-            row = rowList.get(0);
+            row = rowList.getFirst();
         }
         else
         {
