@@ -37,7 +37,6 @@ import ca.bc.gov.health.qa.autotest.plr.fhir.maintain.organization.model.OrgRole
 import ca.bc.gov.health.qa.autotest.plr.util.UserType;
 import ca.bc.gov.health.qa.autotest.plr.web.pages.plr.provider.SearchProviderPage;
 import ca.bc.gov.health.qa.autotest.plr.web.pages.plr.provider.SearchProviderResultsFragment;
-import ca.bc.gov.health.qa.autotest.plr.web.tests.TestHelper;
 import ca.bc.gov.health.qa.autotest.plr.web.tests.helper.UpdateSimpleHelper;
 import ca.bc.gov.health.qa.autotest.plr.web.workflows.PlrWebWorkflow;
 import ca.bc.gov.health.qa.autotest.plr.web.workflows.PlrWebWorkflowManager;
@@ -105,7 +104,7 @@ public class SearchProviderTests implements SimpleTest {
 		IndividualRoleType roleType = queriedIndividual.getRoleType();
 		String surname = queriedIndividual.getFamilyName();
 		String firstname = queriedIndividual.getNames()[0];
-		Map<String, String> address = queriedIndividual.getAddressList().get(0);
+		Map<String, String> address = queriedIndividual.getAddressList().getFirst();
 		String city = address.get("city");
 
 		// step1
@@ -120,8 +119,8 @@ public class SearchProviderTests implements SimpleTest {
 		searchResults = searchProviderPage.searchByCriteria(roleType.name(), firstname, surname, null, city, null,
 				null);
 		List<String> mixedCaseSearch = searchResults.grabResultsRow(0);
-		assertTrue(upperCaseSearch.equals(lowerCaseSearch), "The search results are not equal");
-		assertTrue(mixedCaseSearch.equals(lowerCaseSearch), "The search results are not equal");
+        assertEquals(lowerCaseSearch, upperCaseSearch, "The search results are not equal");
+        assertEquals(lowerCaseSearch, mixedCaseSearch, "The search results are not equal");
 
 		// FHIR-organization
 		fhirController = new FHIRController(UserType.ADMIN);
@@ -131,7 +130,7 @@ public class SearchProviderTests implements SimpleTest {
 				org.getIdentifier(IdentifierType.IPC));
 		fhirController.close();
 		String orgName = orgQueried.getName();
-		address = orgQueried.getAddressList().get(0);
+		address = orgQueried.getAddressList().getFirst();
 		String orgCity = address.get("city");
 		String orgAddressline1 = address.get("line1");
 		String orgDesp = orgQueried.getAlias();
@@ -147,8 +146,8 @@ public class SearchProviderTests implements SimpleTest {
 		// step 6
 		searchResults = searchProviderPage.searchForOrganization("ORG", orgName, orgDesp, orgAddressline1, orgCity);
 		List<String> orgMixedCaseSearch = searchResults.grabResultsRow(0);
-		assertTrue(orgMixedCaseSearch.equals(orgUpperCaseSearch), "The search results are not equal");
-		assertTrue(orgUpperCaseSearch.equals(orgLowerCaseSearch), "The search results are not equal");
+        assertEquals(orgUpperCaseSearch, orgMixedCaseSearch, "The search results are not equal");
+        assertEquals(orgLowerCaseSearch, orgUpperCaseSearch, "The search results are not equal");
 	}
 
 	// Provider Search
@@ -170,7 +169,7 @@ public class SearchProviderTests implements SimpleTest {
 		String providerId = queriedIndividual.getIdentifier(IdentifierType.DENID);
 		String surname = queriedIndividual.getFamilyName();
 		String firstname = queriedIndividual.getNames()[0];
-		Map<String, String> address = queriedIndividual.getAddressList().get(0);
+		Map<String, String> address = queriedIndividual.getAddressList().getFirst();
 		String city = address.get("city");
 		String cpnString = queriedIndividual.getIdentifier(IdentifierType.CPN);
 		String cpnNum = UpdateSimpleHelper.getRegIdString(IdentifierType.CPN.name(), cpnString);
@@ -196,7 +195,7 @@ public class SearchProviderTests implements SimpleTest {
 		fhirController.close();
 
 		String oegName = orgQueried.getName();
-		address = orgQueried.getAddressList().get(0);
+		address = orgQueried.getAddressList().getFirst();
 		String orgCity = address.get("city");
 		String orgAddressline1 = address.get("line1");
 		String orgDesp = orgQueried.getAlias();
@@ -244,8 +243,8 @@ public class SearchProviderTests implements SimpleTest {
 		for(int i=0;i<roandomNumber;i++) {
 			IndividualMaintainConfig individualConfig = new IndividualMaintainConfig(IndividualRoleType.DEN);			
 			MaintainIndividualBuilder individual = individualFactory.build(individualConfig);
-			  Map<String,String> individualAddress = individual.getAddressList().get(0);
-		        individualAddress.put("line1", String.valueOf(getRandomNumber(2,500))+" Oak Avenue");
+			  Map<String,String> individualAddress = individual.getAddressList().getFirst();
+		        individualAddress.put("line1", getRandomNumber(2,500) + " Oak Avenue");
 		        individualAddress.put("city", "Custom City");
 		        individual.setAddressList(List.of(individualAddress));
 			individual = fhirController.submitIndividual(individual);
@@ -254,13 +253,11 @@ public class SearchProviderTests implements SimpleTest {
 		SearchProviderResultsFragment searchResults = searchProvider.searchByCriteria(IndividualRoleType.DEN.name(), null, null, null,
 				"Custom City", null, null);
 		assertTrue(searchResults.grabResultsRowCount() > 1, "search result has too less rows");
-		List<String> names = new ArrayList<String>();
+		List<String> names = new ArrayList<>();
 		for (int i = 0; i < searchResults.grabResultsRowCount(); i++) {
 			List<String> resultRow = searchResults.grabResultsRow(i);
 			String name = resultRow.getFirst();
-			if (name.contains("Link to View")) {
-				continue;
-			} else {
+			if (!name.contains("Link to View")) {
 				names.add(name);
 			}
 		}
@@ -272,8 +269,8 @@ public class SearchProviderTests implements SimpleTest {
 		for (int i = 0; i < roandomNumber; i++) {
 			OrganizationMaintainConfig orgConfig = new OrganizationMaintainConfig(OrgRoleType.ORG);
 			MaintainOrgBuilder org = organizationFactory.build(orgConfig);
-			Map<String, String> address = org.getAddressList().get(0);
-			address.put("line1", String.valueOf(getRandomNumber(2,500))+" Main St");
+			Map<String, String> address = org.getAddressList().getFirst();
+			address.put("line1", getRandomNumber(2,500) + " Main St");
 			address.put("city", "Sample City");
 			org.setAddressList(List.of(address));
 			org = fhirController.submitOrganization(org);
@@ -282,13 +279,11 @@ public class SearchProviderTests implements SimpleTest {
 		//test
 		searchResults = searchProvider.searchForOrganization(OrgRoleType.ORG.name(), null, null, null, "Sample City");
 		assertTrue(searchResults.grabResultsRowCount() > 1, "search result has too less rows");
-		names = new ArrayList<String>();
+		names = new ArrayList<>();
 		for (int i = 0; i < searchResults.grabResultsRowCount(); i++) {
 			List<String> resultRow = searchResults.grabResultsRow(i);
 			String name = resultRow.getFirst();
-			if (name.contains("Link to View")) {
-				continue;
-			} else {
+			if (!name.contains("Link to View")) {
 				names.add(name);
 			}
 		}
@@ -317,10 +312,10 @@ public class SearchProviderTests implements SimpleTest {
 		IndividualRoleType roleType = queriedIndividual.getRoleType();
 		String surname = queriedIndividual.getFamilyName();
 		String firstname = queriedIndividual.getNames()[0];
-		Map<String, String> address = queriedIndividual.getAddressList().get(0);
+		Map<String, String> address = queriedIndividual.getAddressList().getFirst();
 		String city = address.get("city");
 		List<Map<String, String>> expertisesList = queriedIndividual.getExpertiseList();
-		String expertise = expertisesList.get(0).get("code");
+		String expertise = expertisesList.getFirst().get("code");
 		// step 1
 		SearchProviderResultsFragment searchResults = searchProviderPage.searchByCriteria(roleType.name(), firstname,
 				surname, null, city, null, null);
@@ -328,16 +323,16 @@ public class SearchProviderTests implements SimpleTest {
 		// step 2
 		searchResults = searchProviderPage.searchByCriteria(roleType.name(), null, null, null, null, null, null);
 		String errMsg = searchProviderPage.grabPageErrorMessage();
-		assertTrue(errMsg.equals(errorMissingData), "Expected error message not found");
+        assertEquals(errorMissingData, errMsg, "Expected error message not found");
 		searchProviderPage.clearRoleType();
 		// step 3
 		searchResults = searchProviderPage.searchByCriteria(null,null,surname, null,null, null, null);
 		errMsg = searchProviderPage.grabPageErrorMessage();
-		assertTrue(errMsg.equals(errorMissingData), "Expected error message not found");
+        assertEquals(errorMissingData, errMsg, "Expected error message not found");
 		// step 4
 		searchResults = searchProviderPage.searchByCriteria(null, firstname,null, null, null, null, null);
 		errMsg = searchProviderPage.grabPageErrorMessage();
-		assertTrue(errMsg.equals(errorMissingData), "Expected error message not found");
+        assertEquals(errorMissingData, errMsg, "Expected error message not found");
 		// step 5
 		searchResults = searchProviderPage.searchByCriteria(null, null, null, null, city, null, null);
 		errMsg = searchProviderPage.grabPageErrorMessage();
@@ -346,13 +341,13 @@ public class SearchProviderTests implements SimpleTest {
 		// step 6
 		searchResults = searchProviderPage.searchByCriteria(null, null, null, "M", null, null, null);
 		errMsg = searchProviderPage.grabPageErrorMessage();
-		assertTrue(errMsg.equals(errorMissingData), "Expected error message not found");
+        assertEquals(errorMissingData, errMsg, "Expected error message not found");
 		searchProviderPage.clearGender();
 		// step 7
 		searchResults = searchProviderPage.searchByCriteria(null, null, null, null, null, null, null,
 				List.of("DPH"), null);
 		assertTrue(searchResults.grabResultsRowCount() > 0, "search result has too less rows");
-		searchProviderPage.clearExprtise(List.of("DPH"));
+		searchProviderPage.clearExpertise(List.of("DPH"));
 		// step 8
 		searchResults = searchProviderPage.searchByCriteria(null, null, null, null, null, null, null, null,
 				List.of("ENG"));
@@ -386,14 +381,14 @@ public class SearchProviderTests implements SimpleTest {
 		SearchProviderResultsFragment searchResults = searchProviderPage.searchByIdentifier(IdentifierType.DENID.name(),
 				null, false);
 		String errMsg = searchProviderPage.grabPageErrorMessage();
-		assertTrue(errMsg.equals(errorMsgProiderID), "Expected error message not found");
+        assertEquals(errorMsgProiderID, errMsg, "Expected error message not found");
 		// step2
 		searchResults = searchProviderPage.searchByIdentifier(IdentifierType.DENID.name(), providerId);
 		assertTrue(searchResults.grabResultsRowCount() > 0);
 		// step3
 		searchResults = searchProviderPage.searchByRegistryIdentifier(IdentifierType.CPN.name(), null, false);
 		errMsg = searchProviderPage.grabPageErrorMessage();
-		assertTrue(errMsg.equals(errorMsgRegIdValue), "Expected error message not found");
+        assertEquals(errorMsgRegIdValue, errMsg, "Expected error message not found");
 		// step4
 		searchResults = searchProviderPage.searchByRegistryIdentifier(IdentifierType.CPN.name(), cpnNum);
 		assertTrue(searchResults.grabResultsRowCount() > 0);
@@ -425,7 +420,7 @@ public class SearchProviderTests implements SimpleTest {
 		fhirController.close();
 		OrgRoleType roleType = orgQueried.getRoleType();
 		String name = orgQueried.getName();
-		Map<String, String> address = orgQueried.getAddressList().get(0);
+		Map<String, String> address = orgQueried.getAddressList().getFirst();
 		String city = address.get("city");
 		String addressline1 = address.get("line1");
 		String desp = orgQueried.getAlias();
@@ -437,7 +432,7 @@ public class SearchProviderTests implements SimpleTest {
 		// Step 2
 		searchResults = searchProviderPage.searchForOrganization(roleType.name(), null, null, null, null);
 		String errMsg = searchProviderPage.grabPageErrorMessage();
-		assertTrue(errMsg.equals(errorEntryError), "Expected error message not found");
+        assertEquals(errorEntryError, errMsg, "Expected error message not found");
 		// Step 3
 		searchResults = searchProviderPage.searchForOrganization(roleType.name(), name, null, null, null);
 		assertTrue(searchResults.grabResultsRowCount() > 0, "search result has too less rows");
@@ -466,8 +461,8 @@ public class SearchProviderTests implements SimpleTest {
 		for (int i = 0; i < SEARCH_PROVIDER_MAX_RESULTS+1; i++) {
 			IndividualMaintainConfig individualConfig = new IndividualMaintainConfig(IndividualRoleType.MD);
 			MaintainIndividualBuilder individual = individualFactory.build(individualConfig);
-			Map<String, String> individualAddress = individual.getAddressList().get(0);
-			individualAddress.put("line1", String.valueOf(getRandomNumber(2, 500)) + " Main Avenue");
+			Map<String, String> individualAddress = individual.getAddressList().getFirst();
+			individualAddress.put("line1", getRandomNumber(2, 500) + " Main Avenue");
 			individualAddress.put("city", "Custom City");
 			individual.setAddressList(List.of(individualAddress));
 			individual = fhirController.submitIndividual(individual);
@@ -476,17 +471,17 @@ public class SearchProviderTests implements SimpleTest {
 		
 		SearchProviderResultsFragment searchResults = searchProviderPage.searchByCriteria(IndividualRoleType.MD.name(), null, null, null,
 				"Custom City", null, null);
-		assertTrue(searchResults.grabResultsRowCount() == SEARCH_PROVIDER_MAX_RESULTS);
+        assertEquals(searchResults.grabResultsRowCount(), SEARCH_PROVIDER_MAX_RESULTS);
 		String errMsg = searchProviderPage.grabWarningErrorMessage();
-		assertTrue(errMsg.equals(warningMaxResult), "Expected warning message not found");
+        assertEquals(warningMaxResult, errMsg, "Expected warning message not found");
 		// FHIR
 		OrganizationBuilderFactory organizationFactory = new OrganizationBuilderFactory(
 				OrganizationDataGenerator.getInstance());
 		for (int i = 0; i < SEARCH_PROVIDER_MAX_RESULTS+1; i++) {
 			OrganizationMaintainConfig orgConfig = new OrganizationMaintainConfig(OrgRoleType.ORG);
 			MaintainOrgBuilder org = organizationFactory.build(orgConfig);
-			Map<String, String> address = org.getAddressList().get(0);
-			address.put("line1", String.valueOf(getRandomNumber(2, 500)) + " Oak St");
+			Map<String, String> address = org.getAddressList().getFirst();
+			address.put("line1", getRandomNumber(2, 500) + " Oak St");
 			address.put("city", "Sample City");
 			org.setAddressList(List.of(address));
 			org = fhirController.submitOrganization(org);
@@ -494,13 +489,13 @@ public class SearchProviderTests implements SimpleTest {
 		fhirController.close();
 		// test
 		searchResults = searchProviderPage.searchForOrganization(OrgRoleType.ORG.name(), null, null, null,"Sample City");
-		assertTrue(searchResults.grabResultsRowCount() == SEARCH_PROVIDER_MAX_RESULTS);
-		assertTrue(errMsg.equals(warningMaxResult), "Expected warning message not found");
+        assertEquals(searchResults.grabResultsRowCount(), SEARCH_PROVIDER_MAX_RESULTS);
+        assertEquals(warningMaxResult, errMsg, "Expected warning message not found");
 	}
 
 // 	Search - Zero Results
 	@Test(groups = { "SearchProvider" })
-	public void testSearchZeroResultss() {
+	public void testSearchZeroResults() {
 
 		PlrWebWorkflow workflow = workflowManager_.getSelectedWorkflow();
 		SearchProviderPage searchProvider = workflow.getPlrWebAccessActions().openSearchProvider();
@@ -517,7 +512,6 @@ public class SearchProviderTests implements SimpleTest {
 
 	}
 
-//
 // 	Search by HDS is not in ALM yes, need to be added based on Legacy selenium
 	@Test(groups = { "SearchProvider" })
 	public void testSearchHDS() {
@@ -530,7 +524,7 @@ public class SearchProviderTests implements SimpleTest {
 		fhirController.close();
 		HdsType hdsType = orgQueried.getHdsType();
 		String name = orgQueried.getName();
-		Map<String, String> address = orgQueried.getAddressList().get(0);
+		Map<String, String> address = orgQueried.getAddressList().getFirst();
 		String city = address.get("city");
 		String addressline1 = address.get("line1");
 		String desp = orgQueried.getAlias();
@@ -561,20 +555,18 @@ public class SearchProviderTests implements SimpleTest {
 	
 	/**
 	 * get Random Number
-	 * @param min
-	 * @param max
-	 * @return
+	 * @param min	the min number
+	 * @param max 	the max number
+	 * @return 		random number between min and max
 	 */
 	private int getRandomNumber(int min, int max) {
-		
-	        // Create a Random object
-	        Random random = new Random();
+		// Create a Random object
+		Random random = new Random();
 
-	        // Generate the random number
-	        // nextInt((max - min) + 1) generates a number between 0 and 4
-	        // Adding min (2) shifts the range to be between 2 and 6 (exclusive of 6)
-	        int randomNumber = random.nextInt((max - min) + 1) + min;
-			return randomNumber;
+		// Generate the random number
+		// nextInt((max - min) + 1) generates a number between 0 and 4
+		// Adding min (2) shifts the range to be between 2 and 6 (exclusive of 6)
+		return random.nextInt((max - min) + 1) + min;
 
 	}
 
